--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>To Do List</h1>
 
         <form class="form">
-            <input type="text" class="todo-input" placeholder="Whatch you gotta do?">
+            <input type="text" class="todo-input" placeholder="What do you need to do?">
             <button type="submit" class="add-button">Add</button>
         </form>
     
